add complaint category

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,4 +90,10 @@
 
     </string-array>
 
+    <string-array name="category">
+        <item>Accident</item>
+        <item>Crime</item>
+        <item>Robbery</item>
+    </string-array>
+
 </resources>
